add name and id tags

--- a/home/index.html
+++ b/home/index.html
@@ -32,25 +32,25 @@
             <div class="msg"></div>
             <div class="drop-down">
               Protein:
-              <select name="" id="">
+              <select name="protein" id="protein">
                 <option>Select:</option>
               </select>
             </label>
             <label>
               Grain:
-              <select name="" id="">
+              <select name="grain" id="grain">
                 <option>Select:</option>
               </select>
             </label>
             <label>
               Vegetable 1:
-              <select name="" id="">
+              <select name="soft-veg" id="soft-veg">
                 <option>Select:</option>
               </select>
             </label>
             <label>
               Vegetable 2:
-              <select name="" id="">
+              <select name="hard-veg" id="hard-veg">
                 <option>Select:</option>
               </select>
             </label>
