--- a/home/index.html
+++ b/home/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="./homeStyle.css">
     <title>RobinFood Homepage</title>
   </head>
@@ -29,9 +29,9 @@
               <input type="name" name="name" />
             </label>
             <h3>What ingredients do you have on hand?</h3>
-            <div class="msg"></div>
-            <div class='selects'></div>
-            <button>Submit</button>
+            <div id="msg"></div>
+            <div class='selects' id="selects"></div>
+            <button>Food Me.</button>
           </form>
       </section>
     </main>
