rearranges file structure

--- a/calander/index.html
+++ b/calander/index.html
@@ -29,21 +29,15 @@
           <table>
             <thead>
               <tr>
-                <th>Day:</th>
-                <th>Monday:</th>
-                <th>Tuesday:</th>
-                <th>Wednesday:</th>
-                <th>Thursday:</th>
-                <th>Friday:</th>
+                <th></th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th>Lunch:</th>
-              </tr>
-              <tr>
-                <th>Dinner:</th>
-              </tr>
             </tbody>
           </table>
         </div>
