--- a/recipe/index.html
+++ b/recipe/index.html
@@ -10,6 +10,6 @@
     <main>
         <div id="test-div"></div>
     </main>
-    <script src="./recipe-template.js"></script>    
+    <script type="module" src="./recipe.js"></script>    
 </body>
 </html>
