--- a/calander/index.html
+++ b/calander/index.html
@@ -8,10 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/home.css" />
-    <link rel="stylesheet" href="./calander/calStyle.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
+    <link rel="stylesheet" href="./calStyle.css" />
     <title>RobinFood Weekly Meals!</title>
   </head>
 
@@ -22,27 +22,19 @@
     <main>
       <section class="main-section">
         <h2>Weekly Meals!</h2>
-
-        <div class="results-div"></div>
-
-        <div class="meal-box">
-          <table>
-            <thead>
-              <tr>
-                <th></th>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
+        <div class="calendar-container"></div>
+        <div class="calendar-container">
+          <h3>Monday</h3>
+          <h3>Tuesday</h3>
+          <h3>Wednesday</h3>
+          <h3>Thursday</h3>
+          <h3>Friday</h3>
         </div>
+        <div class="menu-container">
+
+        </div>
+        <button>Start Over with New Ingredients!</button>
       </section>
-      <button>Start Over with New Ingredients!</button>
     </main>
     <footer></footer>
 
