adds basic navigation

--- a/batch/index.html
+++ b/batch/index.html
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-        <div class="gutter-right logo"></div>
+        <div class="gutter-right logo">
+            <a href="../calendar/">Calendar</a>
+            <a href="../sauce/">Sauce</a>
+            <a href="../">Home</a>
+        </div>
     </header>
     <main>
         <section class="main-section">
