--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
-    <link rel="stylesheet" href="./homeStyle.css">
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./home/homeStyle.css">
     <title>RobinFood Homepage</title>
   </head>
 
   <body>
     <header>
-      <div class="gutter-right logo"></div>
+      <div class="gutter-right logo">
+        <a href="./calendar/">Calendar</a>
+        <a href="./sauce/">Sauce</a>
+        <a href="./batch/">Batch</a>
+      </div>
     </header>
     <main>
       <section class="main-section">
@@ -39,6 +43,6 @@
      
     </footer>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./home/app.js"></script>
   </body>
 </html>
