--- a/calendar/index.html
+++ b/calendar/index.html
@@ -17,7 +17,11 @@
 
   <body>
     <header>
-      <div class="gutter-right logo"></div>
+      <div class="gutter-right logo">
+        <a href="../batch/">Batch</a>
+        <a href="../sauce/">Sauce</a>
+        <a href="../">Home</a>
+      </div>
     </header>
     <main>
       <section class="main-section">
