made renderSauce and Sauce functions

--- a/sauce/index.html
+++ b/sauce/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Sauce Recipes</h1>
     <main>
+      <div id="sauces"></div>
     </main>
-    <script src="./sauce.js"></script>    
-</body>
+    <script type="module" src="./sauce.js"></script>
+  </body>
 </html>
