random sauces working

--- a/batch/index.html
+++ b/batch/index.html
@@ -32,6 +32,7 @@
             <div id="batch-recipe-container-div">
 
             </div>
+            <div id="sauce-div"></div>
             </div>
         </section>
     </main>
