--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/home.css" />
-    <link rel="stylesheet" href="./home/homeStyle.css">
-    <title>RobinFood Homepage</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="gutter-right logo">
-        <a href="./calendar/">Calendar</a>
-        <a href="./sauce/">Sauce</a>
-        <a href="./batch/">Batch</a>
-      </div>
-    </header>
-    <main>
-      <section class="main-section">
-        <h2>Welcome to RobinFood!</h2>
-        <div class="info-box"></div>
-          <form id="my-form">
-            <label>
-              Enter Name:
-              <input type="name" name="name" />
-            </label>
-            <h3>What ingredients do you have on hand?</h3>
-            <div id="msg"></div>
-            <div class='selects' id="selects"></div>
-            <button>Food Me.</button>
-          </form>
-      </section>
-    </main>
-    <footer>
-     
-    </footer>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./styles/reset.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/home.css" />
+  <link rel="stylesheet" href="./home/homeStyle.css">
+  <title>RobinFood Homepage</title>
+</head>
 
-    <script type="module" src="./home/app.js"></script>
-  </body>
+<body>
+  <header>
+    <div class="gutter-right logo">
+      <a href="./calendar/">Calendar</a>
+      <a href="./sauce/">Sauce</a>
+      <a href="./batch/">Batch</a>
+    </div>
+  </header>
+  <main>
+    <section class="main-section">
+      <h2>Welcome to RobinFood!</h2>
+      <div class="info-box"></div>
+      <form id="my-form">
+        <label>
+          Enter Name:
+          <input type="name" name="name" />
+        </label>
+        <h3>What ingredients do you have on hand?</h3>
+        <div id="msg"></div>
+        <div class='selects' id="selects"></div>
+        <button>Food Me.</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
+
+  <script type="module" src="./home/app.js"></script>
+</body>
+
 </html>
