add error message const, basic styling

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <div class="gutter-right logo">
+        <a href="./calendar/">Calendar</a>
+        <a href="./sauce/">Sauce</a>
+        <a href="./batch/">Batch</a>
+      </div>
+    </header>
     <h1>Recipes</h1>
     <main>
-        <div id="test-div"></div>
+      <div id="test-div"></div>
     </main>
-    <script type="module" src="./recipe.js"></script>    
-</body>
+    <script type="module" src="./recipe.js"></script>
+  </body>
 </html>
