added calander button

--- a/batch/index.html
+++ b/batch/index.html
@@ -67,9 +67,8 @@
                     <p>Extra, but helpful: Rice cooker or Instant Pot</p>
                 </div>
             </div>
-            <div id="batch-recipe-container-div">
-
-            </div>
+            <div id="batch-recipe-container-div"></div>
+            <button id="calendar-button">Lets look at your week!</button>
             <div id="sauce-div"></div>
             </div>
         </section>
