--- a/calendar/index.html
+++ b/calendar/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/reset.css" />
@@ -34,12 +35,8 @@
           <h3>Thursday</h3>
           <h3>Friday</h3>
         </div>
-        <div class="menu-container">
-
-        </div>
-        <div class="recipe-container">
-          
-        </div>
+        <div class="menu-container"></div>
+        <div class="recipe-container"></div>
         <button>Start Over with New Ingredients!</button>
       </section>
     </main>
