--- a/recipe/index.html
+++ b/recipe/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
+      rel="stylesheet"
+    />
     <title>Recipes</title>
   </head>
   <body>
