home styling and custom font and colors

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
-      rel="stylesheet"
-    />
-    <title>Recipes</title>
-  </head>
-  <body>
-    <header>
-      <div class="gutter-right logo">
-        <a href="./calendar/">Calendar</a>
-        <a href="./sauce/">Sauce</a>
-        <a href="./batch/">Batch</a>
-      </div>
-    </header>
-    <h1>Recipes</h1>
-    <main>
-      <div id="test-div"></div>
-    </main>
-    <script type="module" src="./recipe.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,900&display=swap"
+    rel="stylesheet">
+  <title>Recipes</title>
+</head>
+
+<body>
+  <header>
+    <div class="gutter-right logo">
+      <a href="./calendar/">Calendar</a>
+      <a href="./sauce/">Sauce</a>
+      <a href="./batch/">Batch</a>
+    </div>
+  </header>
+  <h1>Recipes</h1>
+  <main>
+    <div id="test-div"></div>
+  </main>
+  <script type="module" src="./recipe.js"></script>
+</body>
+
 </html>
