--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
-    <link rel="stylesheet" href="./calStyle.css" />
-    <title>RobinFood Weekly Meals!</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="gutter-right logo">
-        <a href="../batch/">Batch</a>
-        <a href="../sauce/">Sauce</a>
-        <a href="../">Home</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../styles/reset.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/home.css" />
+  <link rel="stylesheet" href="./calStyle.css" />
+  <title>RobinFood Weekly Meals!</title>
+</head>
+
+<body>
+  <header>
+    <div class="gutter-right logo">
+      <a href="../batch/">Batch</a>
+      <a href="../sauce/">Sauce</a>
+      <a href="../">Home</a>
+    </div>
+  </header>
+  <main>
+    <section class="main-section">
+      <h2>Weekly Meals!</h2>
+      <div class="calendar-container"></div>
+      <div class="calendar-container">
+        <h3>Monday</h3>
+        <h3>Tuesday</h3>
+        <h3>Wednesday</h3>
+        <h3>Thursday</h3>
+        <h3>Friday</h3>
       </div>
-    </header>
-    <main>
-      <section class="main-section">
-        <h2>Weekly Meals!</h2>
-        <div class="calendar-container"></div>
-        <div class="calendar-container">
-          <h3>Monday</h3>
-          <h3>Tuesday</h3>
-          <h3>Wednesday</h3>
-          <h3>Thursday</h3>
-          <h3>Friday</h3>
-        </div>
-        <div class="menu-container"></div>
-        <div class="recipe-container"></div>
-        <button>Start Over with New Ingredients!</button>
-      </section>
-    </main>
-    <footer></footer>
+      <div class="menu-container"></div>
+      <div class="recipe-container"></div>
+      <button>Start Over with New Ingredients!</button>
+    </section>
+  </main>
+  <footer></footer>
 
-    <script type="module" src="./calendar.js"></script>
-  </body>
+  <script type="module" src="./calendar.js"></script>
+</body>
+
 </html>
