--- a/calendar/index.html
+++ b/calendar/index.html
@@ -17,23 +17,15 @@
   </head>
 
   <body>
-    <header>
-      <div class="gutter-right logo">
-        <a href="../batch/">Batch</a>
-        <a href="../sauce/">Sauce</a>
-        <a href="../">Home</a>
-      </div>
-    </header>
     <main>
       <section class="main-section">
-        <h2>Weekly Meals!</h2>
-        <div class="calendar-container"></div>
+        <h2 id="welcome"></h2>
         <div class="calendar-container">
-          <h3>Monday</h3>
-          <h3>Tuesday</h3>
-          <h3>Wednesday</h3>
-          <h3>Thursday</h3>
-          <h3>Friday</h3>
+          <h3>M</h3>
+          <h3>T</h3>
+          <h3>W</h3>
+          <h3>T</h3>
+          <h3>F</h3>
         </div>
         <div class="menu-container"></div>
         <div class="recipe-container"></div>
