fine tuning home css

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <section class="main-section">
       <div class="logo">
         <h1>RobinFood</h1>
-        <h3>Meal prep for the masses.</h3>
+        <h3 class="subtitle">Meal prep for the masses.</h3>
       </div>
       <div class="user-entry">
+        <h3>Why meal prep?</h3>
         <p class="info-box">Meal prepping can be an easy and fun experience. The main benefit of meal-prepping is that
           it helps reduce food waste. Also it’s a great way to utilize your veggies from a CSA or vegetable delivery
           box. When you are busy or cooking everyday sounds like too much, meal prepping will help you still eat
