--- a/batch/index.html
+++ b/batch/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/home.css" />
@@ -21,10 +23,17 @@
             <a href="../sauce/">Sauce</a>
             <a href="../">Home</a>
         </div>
+        <div class="calender-button-div"><button id="calendar-button">Lets look at your week!</button>
     </header>
+    </div>
     <main>
         <section class="main-section">
+            <div id="batch-recipe-container-div"></div>
+            <div id="sauce-div"></div>
+            </div>
+
             <div class="tools-and-tips-div">
+
                 <h2>Lets Talk About Batch Processing!</h2>
                 <div class="batch-tips-div">
                     <h2>Helpful Tips</h2>
@@ -56,7 +65,7 @@
                         best tip is to take these new recipes and
                         JUST START.</p>
                 </div>
-                <div>
+                <div class="equipment-div">
                     <h3>Essential Equipment to Have on Hand:</h3>
 
                     <p>Cutting board</p>
@@ -67,10 +76,6 @@
                     <p>Salad dressing containers</p>
                     <p>Extra, but helpful: Rice cooker or Instant Pot</p>
                 </div>
-            </div>
-            <div id="batch-recipe-container-div"></div>
-            <button id="calendar-button">Lets look at your week!</button>
-            <div id="sauce-div"></div>
             </div>
         </section>
     </main>
