--- a/calendar/index.html
+++ b/calendar/index.html
@@ -21,12 +21,16 @@
 </head>
 <body>
   <header>
-    <div class="gutter-right logo">
+    <div class='logo'>
+      <h1>RobinFood</h1>
+      <h3>Meal prep for the masses.</h3>
+    </div>
+    <nav>
       <a href="../batch/">Batch</a>
       <a href="../sauce/">Sauce</a>
       <a href="../">Home</a>
-    </div>
-  </header>
+    </nav>
+      </header>
   <main>
     <section class="main-section">
       <h2 id="welcome"></h2>
