adds header and nav bar

--- a/batch/index.html
+++ b/batch/index.html
@@ -19,14 +19,17 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
+        <div class='logo'>
+            <h1>RobinFood</h1>
+            <h3>Meal prep for the masses.</h3>
+        </div>
+        <nav>
             <a href="../calendar/">Calendar</a>
             <a href="../sauce/">Sauce</a>
             <a href="../">Home</a>
-        </div>
-        <div class="calender-button-div"><button id="calendar-button">Lets look at your week!</button>
+        </nav>
     </header>
-    </div>
+
     <main>
         <section class="main-section">
             <div id="batch-recipe-container-div"></div>
@@ -34,50 +37,58 @@
             </div>
 
             <div class="tools-and-tips-div">
+                <div class="calender-button-div"><button id="calendar-button">Lets look at your week!</button>
+                    <h2>Lets Talk About Batch Processing!</h2>
+                    <div class="batch-tips-div">
+                        <h2>Helpful Tips</h2>
+                        <h3>Get Organized:</h3>
+                        <p>Organization is the key to good meal prep and a successful plan. Keeping a clean area to
+                            work,
+                            space in the refrigerator and a shopping list will make your time in the kitchen a breeze.
+                            Know
+                            ahead of time what you have on hand for your prep.</p>
+                        <h3>Invest In Some Quality Storage Containers:</h3>
+                        <p>Food Storage is an essential part of meal prep. It’s worth it to invest into matching
+                            containers.
+                            Glass containers are a nice option. They are eco-friendly and microwave safe.</p>
+                        <h3>Maximize Multitasking:</h3>
+                        <p>While roasting some vegetables and/or proteins in the oven, you can also chop/wash all your
+                            herbs
+                            and
+                            other raw
+                            vegetables. Prepare a few sauces ahead of time to keep ready for the week. If you are making
+                            soup
+                            and have extra, freeze for an easy heated meal later on in the week. The more you get going
+                            at
+                            once,
+                            the faster the prep.</p>
+                        <h3>Add Spices To Your Meals:</h3>
+                        <p>After you prep your ingredients and are ready to assemble the recipes, add some spice to
+                            switch
+                            it up
+                            during the week. Some tried and true spices are; paprika, salt, pepper, dill, chili powder,
+                            basil,
+                            and thyme.</p>
+                        <h3>Know That You Can Do It:</h3>
+                        <p>It may seem overwhelming to do a large batch of cooking all at once, but think of the time
+                            and
+                            freedom you will have over the week. You will also save money, eat heathy and try new foods.
+                            The
+                            best tip is to take these new recipes and
+                            JUST START.</p>
+                    </div>
+                    <div class="equipment-div">
+                        <h3>Essential Equipment to Have on Hand:</h3>
 
-                <h2>Lets Talk About Batch Processing!</h2>
-                <div class="batch-tips-div">
-                    <h2>Helpful Tips</h2>
-                    <h3>Get Organized:</h3>
-                    <p>Organization is the key to good meal prep and a successful plan. Keeping a clean area to work,
-                        space in the refrigerator and a shopping list will make your time in the kitchen a breeze. Know
-                        ahead of time what you have on hand for your prep.</p>
-                    <h3>Invest In Some Quality Storage Containers:</h3>
-                    <p>Food Storage is an essential part of meal prep. It’s worth it to invest into matching containers.
-                        Glass containers are a nice option. They are eco-friendly and microwave safe.</p>
-                    <h3>Maximize Multitasking:</h3>
-                    <p>While roasting some vegetables and/or proteins in the oven, you can also chop/wash all your herbs
-                        and
-                        other raw
-                        vegetables. Prepare a few sauces ahead of time to keep ready for the week. If you are making
-                        soup
-                        and have extra, freeze for an easy heated meal later on in the week. The more you get going at
-                        once,
-                        the faster the prep.</p>
-                    <h3>Add Spices To Your Meals:</h3>
-                    <p>After you prep your ingredients and are ready to assemble the recipes, add some spice to switch
-                        it up
-                        during the week. Some tried and true spices are; paprika, salt, pepper, dill, chili powder,
-                        basil,
-                        and thyme.</p>
-                    <h3>Know That You Can Do It:</h3>
-                    <p>It may seem overwhelming to do a large batch of cooking all at once, but think of the time and
-                        freedom you will have over the week. You will also save money, eat heathy and try new foods. The
-                        best tip is to take these new recipes and
-                        JUST START.</p>
+                        <p>Cutting board</p>
+                        <p>Sharp knives</p>
+                        <p>Food storage containers</p>
+                        <p>Sheet pans</p>
+                        <p>Aluminum foil</p>
+                        <p>Salad dressing containers</p>
+                        <p>Extra, but helpful: Rice cooker or Instant Pot</p>
+                    </div>
                 </div>
-                <div class="equipment-div">
-                    <h3>Essential Equipment to Have on Hand:</h3>
-
-                    <p>Cutting board</p>
-                    <p>Sharp knives</p>
-                    <p>Food storage containers</p>
-                    <p>Sheet pans</p>
-                    <p>Aluminum foil</p>
-                    <p>Salad dressing containers</p>
-                    <p>Extra, but helpful: Rice cooker or Instant Pot</p>
-                </div>
-            </div>
         </section>
     </main>
     <footer>
