add header to sauce page

--- a/sauce/index.html
+++ b/sauce/index.html
@@ -17,12 +17,16 @@
   <body>
     <main>
       <header>
-        <div class="gutter-right logo">
-          <a href="./calendar/">Calendar</a>
-          <a href="./sauce/">Sauce</a>
-          <a href="./batch/">Batch</a>
+        <div class='logo'>
+          <h1>RobinFood</h1>
+          <h3>Meal prep for the masses.</h3>
         </div>
-      </header>
+        <nav>
+          <a href="../batch/">Batch</a>
+          <a href="../calendar/index.html">Calendar</a>
+          <a href="../">Home</a>
+        </nav>
+          </header>
       <div class="recipe-title">
       <h1>Sauce Recipes</h1>
     </div>
