--- a/about/index.html
+++ b/about/index.html
@@ -29,18 +29,22 @@
         <nav>
             <a href="../calendar/">Calendar</a>
             <a href="../sauce/">Sauce</a>
+            <a href="../batch/">Batch</a>
             <a href="../">Home</a>
         </nav>
     </header>
     <section class="about-container">
-        <h1>RobinFood Recipe</h1>
+        <div>
+            <h1>RobinFood Recipe</h1>
+            <h3>Combine all ingredients in a medium-sized Zoom room and simmer until tender.</h3>
+        </div>
         <div class="bio">
             <div class="photo-div">
-                <img src="../assets/dylan.jpg" alt="">
+                <img src="../assets/nicole.png" alt="">
             </div>
             <div class="personal-blurb">
-                <h2>Ingredient: Dylan White</h2>
-                <p>Preparation: Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <h2><span class="bold">Ingredient:</span>Nicole Martin</h2>
+                <p><span class="bold">Preparation: </span>Nicole is a full stack software engineer located in Portland, OR. She enjoys working with computers and collaborating on fun and impactful projects that will help the planet, animals, and all humans. Also a  huge fan of vegan food, coffee and being outside in the beautiful Pacific Northwest with her dog, Cooper. Her favorite part of meal prepping is the time you gain durning the week by not having to cook every night. </p>
             </div>
         </div>
         <div class="bio">
@@ -48,8 +52,8 @@
                 <img src="../assets/dylan.jpg" alt="">
             </div>
             <div class="personal-blurb">
-                <h2>Ingredient: Dylan White</h2>
-                <p>Preparation: Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <h2><span class="bold">Ingredient:</span> Dylan White</h2>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
             </div>
         </div>
         <div class="bio">
@@ -57,8 +61,8 @@
                 <img src="../assets/dylan.jpg" alt="">
             </div>
             <div class="personal-blurb">
-                <h2>Ingredient: Dylan White</h2>
-                <p>Preparation: Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <h2><span class="bold">Ingredient:</span> Dylan White</h2>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
             </div>
         </div>
         <div class="bio">
@@ -66,8 +70,8 @@
                 <img src="../assets/dylan.jpg" alt="">
             </div>
             <div class="personal-blurb">
-                <h2>Ingredient: Dylan White</h2>
-                <p>Preparation: Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <h2><span class="bold">Ingredient:</span> Dylan White</h2>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
             </div>
         </div>
     </section>
