--- a/batch/index.html
+++ b/batch/index.html
@@ -24,9 +24,10 @@
             <h3>Meal prep for the masses.</h3>
         </div>
         <nav>
+            <a href="../">Home</a>
             <a href="../calendar/">Calendar</a>
             <a href="../sauce/">Sauce</a>
-            <a href="../">Home</a>
+            <a href="../about/">About</a>
         </nav>
     </header>
 
