--- a/calendar/index.html
+++ b/calendar/index.html
@@ -40,9 +40,13 @@
         <h4>W</h4>
         <h4>T</h4>
         <h4>F</h4>
+        <div id="border-div"></div>
       </div>
       <div class="menu-container"></div>
-      <div class="recipe-container"></div>
+      <div class="recipe-container">
+        <div id="spacer-div"></div>
+        <div id="border-div-recipe"></div>
+      </div>
       <button>Start Over with New Ingredients!</button>
     </section>
   </main>
