add header style to about page, add about us to sauce page

--- a/sauce/index.html
+++ b/sauce/index.html
@@ -24,6 +24,7 @@
         <nav>
           <a href="../batch/">Batch</a>
           <a href="../calendar/index.html">Calendar</a>
+          <a href="../about/">About</a>
           <a href="../">Home</a>
         </nav>
           </header>
