--- a/index.html
+++ b/index.html
@@ -30,19 +30,31 @@
         </div>
         <div class="user-entry">
           <h3>Why meal prep?</h3>
-          <p class="info-box">
-            Meal prepping can be an easy and fun experience. The main benefit of
-            meal-prepping is that it helps reduce food waste. Also it’s a great
-            way to utilize your veggies from a CSA or vegetable delivery box.
-            When you are busy or cooking everyday sounds like too much, meal
-            prepping will help you still eat home-cooked meals without having to
-            spend time everyday cooking, and can cut costs of frequent take-out
-            food.
-          </p>
+          <ul class="info-box">
+            <span>🔪</span>
+            <li>
+             Prepping meals for yourself can be easy and fun!
+            </li>
+            <span>🍠</span>
+            <li>
+            Reduce food waste by utilizing what you have on hand
+            </li>
+            <span>🥗</span>
+            <li>
+              Batch processing is a great way to make the most of your CSA box each week
+            </li>
+            <span>⏲</span>
+            <li>
+              Planning ahead helps to reduce daily cooking time by reducing meals into a few steps using prepared ingredients
+            </li>
+            <span>💰</span>
+            <li>
+              Save money on take-out meals by making simple and efficient meals at home!
+            </li>
+          </ul>
           <form id="my-form">
-            <label class="name-input">
-              Enter Your Name:
-              <input type="name" name="name" />
+            <label class="name-input" >
+              <input type="name" name="name" placeholder="Enter Your Name" />
             </label>
             <h2>What ingredients do you have on hand?</h2>
             <div id="msg"></div>
