nav bar style update and shopping list button added to batch page

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -19,18 +19,20 @@
   <link rel="stylesheet" href="./calStyle.css" />
   <title>RobinFood Weekly Meals!</title>
 </head>
+
 <body>
   <header>
     <div class='logo'>
-      <h1>RobinFood</h1>
-      <h3>Meal prep for the masses.</h3>
+      <h1 class="class= h-text">RobinFood</h1>
+      <h3 class="class= h-text">Meal prep for basic batches.</h3>
     </div>
     <nav>
-      <a href="../batch/">Batch</a>
-      <a href="../sauce/">Sauce</a>
-      <a href="../">Home</a>
+      <a class="h-text" href="../batch/">Batch</a>
+      <a class="h-text" href="../sauce/">Sauce</a>
+      <a class="h-text" href="../about/">About</a>
+      <a class="h-text" href="../">Home</a>
     </nav>
-      </header>
+  </header>
   <main>
     <section class="main-section">
       <h2 id="welcome"></h2>
