--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class='logo'>
             <h1>RobinFood</h1>
-            <h3>Meal prep for the masses.</h3>
+            <h3>Meal prep for basic batches.</h3>
         </div>
         <nav>
             <a href="../calendar/">Calendar</a>
@@ -44,7 +44,11 @@
             </div>
             <div class="personal-blurb">
                 <h2><span class="bold">Ingredient:</span>Nicole Martin</h2>
-                <p><span class="bold">Preparation: </span>Nicole is a full stack software engineer located in Portland, OR. She enjoys working with computers and collaborating on fun and impactful projects that will help the planet, animals, and all humans. Also a  huge fan of vegan food, coffee and being outside in the beautiful Pacific Northwest with her dog, Cooper. Her favorite part of meal prepping is the time you gain durning the week by not having to cook every night. </p>
+                <p><span class="bold">Preparation: </span>Nicole is a full stack software engineer located in Portland,
+                    OR. She enjoys working with computers and collaborating on fun and impactful projects that will help
+                    the planet, animals, and all humans. Also a huge fan of vegan food, coffee and being outside in the
+                    beautiful Pacific Northwest with her dog, Cooper. Her favorite part of meal prepping is the time you
+                    gain durning the week by not having to cook every night. </p>
             </div>
         </div>
         <div class="bio">
@@ -53,7 +57,11 @@
             </div>
             <div class="personal-blurb">
                 <h2><span class="bold">Ingredient:</span> Dylan White</h2>
-                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland,
+                    Oregon. He is interested in exploring the intersection of technology, art and interactive design. He
+                    loves music and spends most of his free time playing with synthesizers and other sound making
+                    apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system.
+                </p>
             </div>
         </div>
         <div class="bio">
@@ -62,7 +70,11 @@
             </div>
             <div class="personal-blurb">
                 <h2><span class="bold">Ingredient:</span> Dylan White</h2>
-                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland,
+                    Oregon. He is interested in exploring the intersection of technology, art and interactive design. He
+                    loves music and spends most of his free time playing with synthesizers and other sound making
+                    apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system.
+                </p>
             </div>
         </div>
         <div class="bio">
@@ -71,7 +83,11 @@
             </div>
             <div class="personal-blurb">
                 <h2><span class="bold">Ingredient:</span> Dylan White</h2>
-                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland, Oregon. He is interested in exploring the intersection of technology, art and interactive design. He loves music and spends most of his free time playing with synthesizers and other sound making apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system. </p>
+                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland,
+                    Oregon. He is interested in exploring the intersection of technology, art and interactive design. He
+                    loves music and spends most of his free time playing with synthesizers and other sound making
+                    apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system.
+                </p>
             </div>
         </div>
     </section>
