--- a/batch/index.html
+++ b/batch/index.html
@@ -21,9 +21,12 @@
     <header>
         <div class='logo'>
             <h1>RobinFood</h1>
-            <h3>Meal prep for the masses.</h3>
+            <h3>Meal prep for basic batches.</h3>
         </div>
-        <nav>
+        <span class="message-span">
+            <h2 class="message-h2">Prepare these recipes at the beginning of the week</h2>
+        </span>
+        <nav class="nav-a">
             <a href="../">Home</a>
             <a href="../calendar/">Calendar</a>
             <a href="../sauce/">Sauce</a>
@@ -33,8 +36,11 @@
 
     <main>
         <section class="main-section">
+
             <div id="batch-recipe-container-div"></div>
-            <div id="sauce-div"></div>
+            <div class="shopping-list-button-div"><button id="shopping-list-button">Heres your sauce shopping
+                    list!</button>
+                <div id="sauce-div"></div>
             </div>
             <div class="calender-button-div"><button id="calendar-button">Lets look at your week!</button>
                 <div class="tools-and-tips-div">
