--- a/index.html
+++ b/index.html
@@ -29,33 +29,43 @@
           <h3 class="subtitle">Meal prep for the masses.</h3>
         </div>
         <div class="user-entry">
-          <h3>Why meal prep?</h3>
+          <h3>Why Meal Prep?</h3>
           <ul class="info-box">
-            <span>🔪</span>
             <li>
-             Prepping meals for yourself can be easy and fun!
+              <div class="emoji">🔪</div>
+              <div>
+                Prepping meals for yourself ahead of time can be easy and fun!
+              </div>
             </li>
-            <span>🍠</span>
             <li>
-            Reduce food waste by utilizing what you have on hand
+              <div class="emoji">🍠</div>
+              <div>
+                Reduce food waste by utilizing what you have on hand
+              </div>
             </li>
-            <span>🥗</span>
             <li>
-              Batch processing is a great way to make the most of your CSA box each week
+              <div class="emoji">🥗</div>
+              <div>
+                Batch processing is a great way to make the most of your CSA box each week
+              </div>
             </li>
-            <span>⏲</span>
             <li>
-              Planning ahead helps to reduce daily cooking time by reducing meals into a few steps using prepared ingredients
+              <div class="emoji">⏲</div>
+              <div>
+                Save time by reducing each meal into a few steps using prepared ingredients
+              </div>
             </li>
-            <span>💰</span>
             <li>
-              Save money on take-out meals by making simple and efficient meals at home!
+              <div class="emoji">💰</div>
+              <div>
+                Save money on take-out meals by making simple and efficient meals at home!
+              </div>
             </li>
           </ul>
+        </div>
+        <div class="user-entry">
           <form id="my-form">
-            <label class="name-input" >
               <input type="name" name="name" placeholder="Enter Your Name" />
-            </label>
             <h2>What ingredients do you have on hand?</h2>
             <div id="msg"></div>
             <div class="selects" id="selects"></div>
