nav bar and no basic batch

--- a/batch/index.html
+++ b/batch/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class='logo'>
             <h1>RobinFood</h1>
-            <h3>Meal prep for basic batches.</h3>
+            <h3>Meal prep for the masses.</h3>
         </div>
         <span class="message-span">
             <h2 class="message-h2">Prepare these recipes at the beginning of the week</h2>
