--- a/calendar/index.html
+++ b/calendar/index.html
@@ -24,7 +24,7 @@
   <header>
     <div class='logo'>
       <h1 class="class= h-text">RobinFood</h1>
-      <h3 class="class= h-text">Meal prep for basic batches.</h3>
+      <h3 class="class= h-text">Meal prep for the masses.</h3>
     </div>
     <nav>
       <a class="h-text" href="../batch/">Batch</a>
@@ -49,10 +49,11 @@
 
         <p>Click on an icon above to reveal your custom recipe.</p>
         <button class="btn">Start Over with New Ingredients!</button>
-      </section>
-    </main>
-    <footer></footer>
+    </section>
+  </main>
+  <footer></footer>
 
-    <script type="module" src="./calendar.js"></script>
-  </body>
+  <script type="module" src="./calendar.js"></script>
+</body>
+
 </html>
