--- a/sauce/index.html
+++ b/sauce/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class='logo'>
         <h1>RobinFood</h1>
-        <h3>Meal prep for basic batches.</h3>
+        <h3>Meal prep for the masses.</h3>
       </div>
       <nav>
         <a href="../batch/">Batch</a>
