--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="user-entry">
         <form id="my-form">
           <input type="name" name="name" placeholder="Enter Your Name" />
-          <h2>What ingredients do you have on hand?</h2>
+          <h2 class="what-ingredients-h2">What ingredients do you have on hand?</h2>
           <div id="msg"></div>
           <div class="selects" id="selects"></div>
           <button class="btn">Food Me.</button>
