about me update

--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class='logo'>
             <h1>RobinFood</h1>
-            <h3>Meal prep for basic batches.</h3>
+            <h3>Meal prep for the masses.</h3>
         </div>
         <nav>
             <a href="../calendar/">Calendar</a>
@@ -35,14 +35,14 @@
     <section class="about-container">
         <div>
             <h1>RobinFood Recipe</h1>
-            <h3>Combine all ingredients in a medium-sized Zoom room and simmer until tender.</h3>
+            <h3>Combine all ingredients in a medium-sized Zoom Room and marinate for a week or more.</h3>
         </div>
         <div class="bio">
             <div class="photo-div">
                 <img src="../assets/nicole.png" alt="">
             </div>
             <div class="personal-blurb">
-                <h2><span class="bold">Ingredient:</span>Nicole Martin</h2>
+                <h2><span class="bold">Ingredient: </span>Nicole Martin</h2>
                 <p><span class="bold">Preparation: </span>Nicole is a full stack software engineer located in Portland,
                     OR. She enjoys working with computers and collaborating on fun and impactful projects that will help
                     the planet, animals, and all humans. Also a huge fan of vegan food, coffee and being outside in the
@@ -65,14 +65,11 @@
         </div>
         <div class="bio">
             <div class="photo-div">
-                <img src="../assets/dylan.jpg" alt="">
+                <img src="../assets/erich.jpg" alt="">
             </div>
             <div class="personal-blurb">
-                <h2><span class="bold">Ingredient:</span> Dylan White</h2>
-                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland,
-                    Oregon. He is interested in exploring the intersection of technology, art and interactive design. He
-                    loves music and spends most of his free time playing with synthesizers and other sound making
-                    apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system.
+                <h2><span class="bold">Ingredient:</span> Erich Sauer (he/them)</h2>
+                <p><span class="bold">Preparation: </span>Erich is a full-stack software developer living, playing, learning and working in Portland, Oregon. Erich is passionate about working towards a more just and equitable world, and hopes to use his focus of front-end development and design to that end. In his free time, he spends as much time as possible surrounded by earth and nature, whether it be houseplants, gardening or wandering in the woods. 
                 </p>
             </div>
         </div>
@@ -90,6 +87,7 @@
             </div>
         </div>
     </section>
+    <div class="bottom-buffer"></div>
 </body>
 
 </html>
