--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
+    <link rel="stylesheet" href="./calStyle.css" />
+    <title>RobinFood Weekly Meals!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Potta+One&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="../styles/reset.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
-  <link rel="stylesheet" href="../styles/home.css" />
-  <link rel="stylesheet" href="./calStyle.css" />
-  <title>RobinFood Weekly Meals!</title>
-</head>
-
-<body>
-  <header>
-    <div class='logo'>
-      <h1 class="class= h-text">RobinFood</h1>
-      <h3 class="class= h-text">Meal prep for basic batches.</h3>
-    </div>
-    <nav>
-      <a class="h-text" href="../batch/">Batch</a>
-      <a class="h-text" href="../sauce/">Sauce</a>
-      <a class="h-text" href="../about/">About</a>
-      <a class="h-text" href="../">Home</a>
-    </nav>
-  </header>
-  <main>
-    <section class="main-section">
-      <h2 id="welcome"></h2>
-      <div class="calendar-container">
-        <h4>M</h4>
-        <h4>T</h4>
-        <h4>W</h4>
-        <h4>T</h4>
-        <h4>F</h4>
-        <div id="border-div"></div>
+  <body>
+    <header>
+      <div class="logo">
+        <h1 class="class= h-text">RobinFood</h1>
+        <h3 class="class= h-text">Meal prep for basic batches.</h3>
       </div>
-      <div class="menu-container"></div>
-      <div class="recipe-container">
-
-        <p>Click on an icon above to reveal your custom recipe.</p>
-        <button class="btn">Start Over with New Ingredients!</button>
+      <nav>
+        <a class="h-text" href="../batch/">Batch</a>
+        <a class="h-text" href="../sauce/">Sauce</a>
+        <a class="h-text" href="../about/">About</a>
+        <a class="h-text" href="../">Home</a>
+      </nav>
+    </header>
+    <main>
+      <section class="main-section">
+        <h2 id="welcome"></h2>
+        <div class="calendar-container">
+          <h4>M</h4>
+          <h4>T</h4>
+          <h4>W</h4>
+          <h4>T</h4>
+          <h4>F</h4>
+          <div id="border-div"></div>
+        </div>
+        <div class="menu-container"></div>
+        <div class="recipe-container"></div>
       </section>
     </main>
-    <footer></footer>
+    <section class="btn-section">
+      <p id="icon-message">Click icon above to see your recipes!</p>
+      <button id="btn-new">Start Over with New Ingredients!</button>
+    </section>
 
     <script type="module" src="./calendar.js"></script>
   </body>
