before pull commit

--- a/batch/index.html
+++ b/batch/index.html
@@ -12,7 +12,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="./batchStyle.css">
     <title>RobinFood Batch Page</title>
 </head>
@@ -35,6 +34,7 @@
     </header>
 
     <main>
+        <div class="spacer-div"></div>
         <section class="main-section">
 
             <div id="batch-recipe-container-div"></div>
