--- a/calendar/index.html
+++ b/calendar/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class="logo">
         <h1 class="class= h-text">RobinFood</h1>
-        <h3 class="class= h-text">Meal prep for basic batches.</h3>
+        <h3 class="class= h-text">Meal prep for the masses.</h3>
       </div>
       <nav>
         <a class="h-text" href="../batch/">Batch</a>
@@ -51,8 +51,7 @@
     <section class="btn-section">
       <p id="icon-message">Click icon above to see your recipes!</p>
       <button id="btn-new">Start Over with New Ingredients!</button>
-  </section>
- <script type="module" src="./calendar.js"></script>
-</body>
-
+    </section>
+    <script type="module" src="./calendar.js"></script>
+  </body>
 </html>
