--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,6 @@
     />
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="./calStyle.css" />
     <title>RobinFood Weekly Meals!</title>
   </head>
@@ -24,7 +23,7 @@
     <header>
       <div class="logo">
         <h1 class="class= h-text">RobinFood</h1>
-        <h3 class="class= h-text">Meal prep for basic batches.</h3>
+        <h3 class="class= h-text">Meal prep for the masses.</h3>
       </div>
       <nav>
         <a class="h-text" href="../batch/">Batch</a>
