--- a/batch/index.html
+++ b/batch/index.html
@@ -22,9 +22,6 @@
             <h1>RobinFood</h1>
             <h3>Meal prep for the masses.</h3>
         </div>
-        <span class="message-span">
-            <h2 class="message-h2">Prepare these recipes at the beginning of the week</h2>
-        </span>
         <nav class="nav-a">
             <a href="../">Home</a>
             <a href="../calendar/">Calendar</a>
@@ -32,9 +29,11 @@
             <a href="../about/">About</a>
         </nav>
     </header>
-
+    
     <main>
-        <div class="spacer-div"></div>
+        <div class="message-div">
+            <h2 class="message-h2">Prepare these recipes at the beginning of the week</h2>
+        </div>
         <section class="main-section">
 
             <div id="batch-recipe-container-div"></div>
