--- a/about/index.html
+++ b/about/index.html
@@ -69,21 +69,25 @@
             </div>
             <div class="personal-blurb">
                 <h2><span class="bold">Ingredient:</span> Erich Sauer (he/them)</h2>
-                <p><span class="bold">Preparation: </span>Erich is a full-stack software developer living, playing, learning and working in Portland, Oregon. Erich is passionate about working towards a more just and equitable world, and hopes to use his focus of front-end development and design to that end. In his free time, he spends as much time as possible surrounded by earth and nature, whether it be houseplants, gardening or wandering in the woods. 
+                <p><span class="bold">Preparation: </span>Erich is a full-stack software developer living, playing,
+                    learning and working in Portland, Oregon. Erich is passionate about working towards a more just and
+                    equitable world, and hopes to use his focus of front-end development and design to that end. In his
+                    free time, he spends as much time as possible surrounded by earth and nature, whether it be
+                    houseplants, gardening or wandering in the woods.
                 </p>
             </div>
         </div>
         <div class="bio">
             <div class="photo-div">
-                <img src="../assets/dylan.jpg" alt="">
+                <img src="../assets/Tyler.JPG" alt="">
             </div>
             <div class="personal-blurb">
-                <h2><span class="bold">Ingredient:</span> Dylan White</h2>
-                <p><span class="bold">Preparation: </span>Dylan is a full stack software engineer living in Portland,
-                    Oregon. He is interested in exploring the intersection of technology, art and interactive design. He
-                    loves music and spends most of his free time playing with synthesizers and other sound making
-                    apparatuses. He hopes to contribute to a more exciting, accessible and engaging internet eco system.
-                </p>
+                <h2><span class="bold">Ingredient:</span> Tyler P. Farris (he/him)</h2>
+                <p><span class="bold">Preparation: </span>Tyler is a full stack software engineer living in Portland,
+                    Oregon. He is eager to make tech more accessible and approachable to all people and hopes to spend
+                    his career facilitating a more inclusive tech community. Tyler loves biking and is excited to get
+                    back to playing his favorite past time- bike polo. He loves to cook, and views food as a way to
+                    bring people together.
             </div>
         </div>
     </section>
