calendar page update

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -48,8 +48,8 @@
       </section>
     </main>
     <section class="btn-section">
-      <p id="icon-message">Click icon above to see your recipes!</p>
-      <button id="btn-new">Start Over with New Ingredients!</button>
+      <p id="icon-message">Click icons above to see your daily meal recipes!</p>
+      <button id="btn-new">Start Over with New Ingredients</button>
     </section>
     <script type="module" src="./calendar.js"></script>
   </body>
