batch page touches

--- a/batch/index.html
+++ b/batch/index.html
@@ -29,21 +29,25 @@
             <a href="../about/">About</a>
         </nav>
     </header>
-    
+
     <main>
         <div class="message-div">
             <h2 class="message-h2">Prepare these recipes at the beginning of the week</h2>
-        </div>
-        <section class="main-section">
-
-            <div id="batch-recipe-container-div"></div>
-            <div class="shopping-list-button-div"><button id="shopping-list-button">Heres your sauce shopping
-                    list!</button>
-                <div id="sauce-div"></div>
-            </div>
             <div class="calender-button-div"><button id="calendar-button">Lets look at your week!</button>
+            </div>
+            <section class="main-section">
+
+                <div id="batch-recipe-container-div"></div>
+
+
+                <div id="sauce-div">
+                    <div class="shopping-list-button-div"><button id="shopping-list-button">Here's your sauce shopping
+                            list!</button></div>
+                </div>
+
+
                 <div class="tools-and-tips-div">
-                    <h2 class="tools-tips-header">Lets Talk About Batch Processing!</h2>
+                    <h2 class="tools-tips-header">Let's Talk About Batch Processing!</h2>
                     <div class="batch-tips-div">
                         <div class="single-toolTip-container">
                             <h3>Get Organized:</h3>
@@ -92,7 +96,7 @@
                         <p>Extra, but helpful: Rice cooker or Instant Pot</p>
                     </div>
                 </div>
-        </section>
+            </section>
     </main>
     <footer>
 
